updated font size and spacing for about page
worked in localhost to see correct font family

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
   <div class="home-page">
     <div class="row">
       <div class="small-3 columns">
-        <img src="img/KaplanLogo.png" alt="Kaplan Media Partners">
+        <img src="img/kaplanlogo.png" alt="Kaplan Media Partners">
       </div>
       <div class="small-9 columns">
         <div id="nav-wrap">
@@ -42,20 +42,20 @@
     <div class="header-border">
     </div>
     <div id="swirl-image">
-      <div class="row">
-        <div class="small-12 columns">
+     <!--  <div class="row">
+        <div class="large-6 columns">
+        </div>
+        <div class="large-6 small-12 columns">
             <ul class="sub-nav-about" >
               <li><a href="#">services</a></li>
               <li><a href="#">awards + recognition</a></li>
               <li><a href="#">bio</a></li>
             </ul>
-
-
         </div>
-      </div>
+      </div> -->
       <div class="row home-body">
         <div class="large-6 small-5 columns">
-          <img src="img/homepage3.JPG">
+          <img src="img/homepage3.jpg">
         </div>
         <div class="large-6 small-7 columns">
           <p class="home-intro"><span class="title">KAPLAN MEDIA PARTNERS</span> 
