including sub nav if needed

--- a/app/index.html
+++ b/app/index.html
@@ -30,11 +30,6 @@
               <li><a href="#">Clients</a></li>
               <li><a href="#">Media</a></li>
               <li id="active"><a href="#">About</a>
-                <!-- <ul class="subnav">
-                  <li><a href="#">services</a></li>
-                  <li><a href="#">awards + recognition</a></li>
-                  <li><a href="#">bio</a></li>
-                </ul> -->
                </li>
             </ul>
           </div>
@@ -43,7 +38,7 @@
       <div class="header-border">
       </div>
       <div id="swirl-image">
-       <!--  <div class="row">
+       <div class="row">
           <div class="large-6 columns">
           </div>
           <div class="large-6 small-12 columns">
@@ -53,7 +48,7 @@
                 <li><a href="#">bio</a></li>
               </ul>
           </div>
-        </div> -->
+        </div>
         <div class="row home-body">
           <div class="large-6 small-5 columns">
             <img src="img/homepage3.jpg">
