--- a/app/index.html
+++ b/app/index.html
@@ -103,59 +103,75 @@
       </div>
       <div class="row">
         <div class="small-10 columns">
-           <p class="home-info">KMP’s first client was Aaron Sorkin and the HBO program THE NEWSROOM, where Kaplan was hired to be a Creative Consultant beginning with Season Two. Writing began in September of 2012. In February of 2013 Kaplan was employed to consult and co-produce a historic documentary of former President George Bush- “41 on 41"- for the Bush Library and family. In April of 2013 Kaplan was given the job of overseeing all live productions on shows at THE FUSE NETWORK. Kaplan was also tasked with reorganizing the network and its 250 employees. In October of 2012, Kaplan was contracted by the Madison Square Garden Company and Fuse Network to create and executive produce a 30-minute daily news program solely about music. The program is called Fuse News, and deals with daily breaking news in the music business.</p>
+          <div class="break-right">
+            <p class="home-info pad-r">KMP’s first client was Aaron Sorkin and the HBO program THE NEWSROOM, where Kaplan was hired to be a Creative Consultant beginning with Season Two. Writing began in September of 2012. In February of 2013 Kaplan was employed to consult and co-produce a historic documentary of former President George Bush- “41 on 41"- for the Bush Library and family. In April of 2013 Kaplan was given the job of overseeing all live productions on shows at THE FUSE NETWORK. Kaplan was also tasked with reorganizing the network and its 250 employees. In October of 2012, Kaplan was contracted by the Madison Square Garden Company and Fuse Network to create and executive produce a 30-minute daily news program solely about music. The program is called Fuse News, and deals with daily breaking news in the music business.</p>
+           </div>
         </div>
-        <div class="small-2 columns break-left">
-          <h4>hbo<br> &amp<br> fuse</h4>
+        <div class="small-2 columns">
+            <h4>hbo<br> &amp<br> fuse
+            </h4>
         </div>
       </div>
       <div class="row">
-        <div class="small-2 columns break-right">
-          <h4>abc<br> &amp<br> cbs</h4>
+        <div class="small-2 columns">
+            <h4>abc<br> &amp<br> cbs
+            </h4>
         </div>
         <div class="small-10 columns">
-          <p class="home-info">
+          <div class="break-left">
+            <p class="home-info pad-l">
             Prior, Kaplan was named Executive Producer of ABC NEWS’ THIS WEEK WITH CHRISTIANE AMANPOUR and put in charge of political coverage and 2012 Election Coverage and Specials in May of 2011, producing the Republican candidates presidential debate. Kaplan was named Executive Producer of The CBS EVENING NEWS with Katie Couric in March of 2007. In revamping this evening newscast he produced several hours of special political and election coverage, including the game changing Katie Couric interviews with Sarah Palin which were honored with a 2010 Columbia Du Pont award. 
           </p>
+          </div>
         </div>
       </div>
       <div class="row">
         <div class="small-10 columns">
-          <p class="home-info">During his long career, Mr. Kaplan was named PRESIDENT of MSNBC, NBC News’ 24-hour cable channel in February of 2004. During his tenure, ratings for virtually every hour of the program day rose by double-digit numbers: 24% in daytime, 27% in primetime and across 2005-2006 grew an amazing 67% in audience share. He also produced major news events including Election Night 2004 and A CONCERT FOR HURRICANE RELIEF, the latter being a one-hour musical event that aired across all NBC networks. Musical guests from Harry Connick and Faith Hill to Tim McGraw and Aaron Neville entertained as the broadcast was simulcast across 7 networks. Hosted by Matt Lauer and celebrities including Hillary Swank, John Goodman and Richard Gere, the program raised more than $50 million for victims of Hurricane Katrina. </p>
+          <div class="break-right">
+            <p class="home-info pad-r">During his long career, Mr. Kaplan was named PRESIDENT of MSNBC, NBC News’ 24-hour cable channel in February of 2004. During his tenure, ratings for virtually every hour of the program day rose by double-digit numbers: 24% in daytime, 27% in primetime and across 2005-2006 grew an amazing 67% in audience share. He also produced major news events including Election Night 2004 and A CONCERT FOR HURRICANE RELIEF, the latter being a one-hour musical event that aired across all NBC networks. Musical guests from Harry Connick and Faith Hill to Tim McGraw and Aaron Neville entertained as the broadcast was simulcast across 7 networks. Hosted by Matt Lauer and celebrities including Hillary Swank, John Goodman and Richard Gere, the program raised more than $50 million for victims of Hurricane Katrina. </p>
+          </div>
         </div>
-        <div class="small-2 columns break-left">
-           <h4 class="top-pad">nbc</h4>
+        <div class="small-2 columns">
+            <h4 class="top-pad">nbc</h4>
+          </div>
         </div>
-      </div>
       <div class="row">
-        <div class="small-2 columns break-right border-margin">
+        <div class="small-2 columns">
           <h4>cnn - u.s.</h4>
         </div>
         <div class="small-10 columns">
-           <p class="home-info">As PRESIDENT of CNN-U.S.from 1997-2000, Kaplan was responsible for all news and programming at the flagship network of the CNN News Group. He further enhanced the network’s reputation as the world’s television news leader by instituting a highly-rated new class of instant news specials, revamped the network’s programming lineup with a new program schedule and anchor teams, and increased the number of hours of hard news programming during the weekends.</p>
+          <div class="break-left">
+            <p class="home-info pad-l">As PRESIDENT of CNN-U.S.from 1997-2000, Kaplan was responsible for all news and programming at the flagship network of the CNN News Group. He further enhanced the network’s reputation as the world’s television news leader by instituting a highly-rated new class of instant news specials, revamped the network’s programming lineup with a new program schedule and anchor teams, and increased the number of hours of hard news programming during the weekends.</p>
+          </div>
         </div>
       </div>
       <div class="row">
         <div class="small-10 columns">
-           <p class="home-info">In January 1994, Kaplan became EXECUTIVE PRODUCER of WORLD NEWS TONIGHT with Peter Jennings and was responsible for the direction and overall editorial content of the most watched evening news program in the nation.  Under Kaplan’s direction in 1994, World News Tonight with Peter Jennings broadcast live from the beaches of Normandy for the 50th anniversary of D-Day and in a series of special news broadcasts from the Middle East, produced the first live program from the Gaza Strip. Prior to that Kaplan was the creator and EXECUTIVE PRODUCER of the ABC News magazine, PRIMETIME LIVE, from 1989 to 1994. Under his direction, the program quickly became one of the leading newsmagazines on television, regularly finishing in the top ten of all programs in his final three years there. </p>
+          <div class="break-right">
+            <p class="home-info pad-r">In January 1994, Kaplan became EXECUTIVE PRODUCER of WORLD NEWS TONIGHT with Peter Jennings and was responsible for the direction and overall editorial content of the most watched evening news program in the nation.  Under Kaplan’s direction in 1994, World News Tonight with Peter Jennings broadcast live from the beaches of Normandy for the 50th anniversary of D-Day and in a series of special news broadcasts from the Middle East, produced the first live program from the Gaza Strip. Prior to that Kaplan was the creator and EXECUTIVE PRODUCER of the ABC News magazine, PRIMETIME LIVE, from 1989 to 1994. Under his direction, the program quickly became one of the leading newsmagazines on television, regularly finishing in the top ten of all programs in his final three years there. </p>
+           </div>
         </div>
-        <div class="small-2 columns break-left">
+        <div class="small-2 columns">
           <h6>world news tonight with peter jennings</h6>
         </div>
       </div>
       <div class="row">
-        <div class="small-2 columns break-right border-margin">
+        <div class="small-2 columns">
           <h6> abc news nightline</h6>
         </div>
         <div class="small-10 columns">
-          <p class="home-info">Kaplan was EXEXCUTIVE PRODUCER OF ABC NEWS NIGHTLINE from 1984 to 1989, where he guided the late-night news program through a period of extraordinary innovation and exclusive interviews. In 1988, Kaplan was Executive Producer of Nightline in the Holy Land, a critically acclaimed week-long series examining Arab-Israeli conflicts. At that time he was also responsible for an unprecedented four-hour Nightline National Town Meeting on AIDS, the most comprehensive coverage of the epidemic ever shown on network television.</p>
+          <div class="break-left">
+            <p class="home-info pad-l">Kaplan was EXEXCUTIVE PRODUCER OF ABC NEWS NIGHTLINE from 1984 to 1989, where he guided the late-night news program through a period of extraordinary innovation and exclusive interviews. In 1988, Kaplan was Executive Producer of Nightline in the Holy Land, a critically acclaimed week-long series examining Arab-Israeli conflicts. At that time he was also responsible for an unprecedented four-hour Nightline National Town Meeting on AIDS, the most comprehensive coverage of the epidemic ever shown on network television.</p>
+          </div>
         </div>
       </div>
       <div class="row">
         <div class="small-10 columns">
-          <p class="home-info">Complementing his distinguished broadcast journalism career, Kaplan has devoted a great deal of his time to education, lecturing on the topics of journalism, advertising and politics in the media at universities across the country including Duke University, Columbia University, Cornell, Wellesley, Boston College, Columbia College, USC, Berkley, and his alma mater University of Illinois at Urbana-Champaign.</p>
+          <div class="break-right">
+            <p class="home-info pad-r">Complementing his distinguished broadcast journalism career, Kaplan has devoted a great deal of his time to education, lecturing on the topics of journalism, advertising and politics in the media at universities across the country including Duke University, Columbia University, Cornell, Wellesley, Boston College, Columbia College, USC, Berkley, and his alma mater University of Illinois at Urbana-Champaign.</p>
+          </div>
         </div>
-        <div class="small-2 columns break-left">
+        <div class="small-2 columns">
           <h6>furthering education</h6>
         </div>
       </div>
