fixed validator errors
updated id's
added ; to &amp
added alt to img

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
     <div id="swirl-image">
       <div class="row home-body">
         <div class="large-6 small-5 columns">
-          <img src="img/homepage3.jpg">
+          <img src="img/homepage3.jpg" alt="Kaplan in the studio">
         </div>
         <div class="large-6 small-7 columns">
           <p class="home-intro"><span class="title">KAPLAN MEDIA PARTNERS</span> 
@@ -57,29 +57,29 @@
       </div>
       <div class="row">
         <div class="small-3 columns">
-            <h3 class="title-pad">awards &amp recognition</h3> 
+            <h3 class="title-pad">awards &amp; recognition</h3> 
         </div>
         <div class="small-9 columns border-break">
           <p class="award-text">Kaplan has received numerous awards for his work over the years, including:</p>
             <div class="small-4 columns">
-              <ul id="awards-list">
+              <ul class="awards-list">
                 <li><span class="number">47</span> Emmy Awards</li>
                 <li><span class="number">4</span> Overseas Press Club Awards</li>
                 <li><span class="number">3</span> George Foster Peabody Awards</li>
               </ul>
             </div> 
             <div class="small-4 columns">
-              <ul id="awards-list">
+              <ul class="awards-list">
                 <li><span class="number">2</span> George Polk Awards</li>
                 <li><span class="number">4</span> Ohio State Awards</li>
                 <li><span class="number">4</span> Alfred I. DuPont-Columbia University Awards</li>
               </ul>
             </div> 
             <div class="small-4 columns">
-              <ul id="awards-list">
+              <ul class="awards-list">
                 <li><span class="number">2</span> Gold Batons</li>
                 <li><span class="number">12</span> Headliner Awards</li>
-                <li><span class="number">8</span> Cine Eagles for Journalistic Excellence &amp the Distinguished Service Award</li>
+                <li><span class="number">8</span> Cine Eagles for Journalistic Excellence &amp; the Distinguished Service Award</li>
               </ul>
             </div> 
           <p class="award-text slanted">and a Bronze Medallion from the Professional Society of Journalists, Sigma Delta Chi.</p>
@@ -108,13 +108,13 @@
            </div>
         </div>
         <div class="small-2 columns">
-            <h4>hbo<br> &amp<br> fuse
+            <h4>hbo<br> &amp;<br> fuse
             </h4>
         </div>
       </div>
       <div class="row">
         <div class="small-2 columns">
-            <h4>abc<br> &amp<br> cbs
+            <h4>abc<br> &amp;<br> cbs
             </h4>
         </div>
         <div class="small-10 columns">
