changed biography location
updated main text to be sans-serif and title text to be serif

--- a/app/index.html
+++ b/app/index.html
@@ -93,11 +93,13 @@
         <div class="small-12 columns line-seperator">
         </div>
       </div>
-      <div class="row top-pad">
-        <div class="small-3 columns break-right border-margin">
-          <h3>biography</h3>
+      <div class="row">
+        <div class="small-3 small-centered columns top-pad">
+          <h3 class="bio-border">biography</h3>
         </div>
-        <div class="small-9 columns">
+      </div>
+      <div class="row">
+        <div class="small-12 columns">
           <p class="home-info">Richard Kaplan is a award-winning producer and pioneer in the journalism industry. His expertise and experiences in TV news span 40 years of in-depth reporting and innovative producing on national and international stories and shows. Kaplan has received numerous awards for his work, including 47 Emmy Awards, 4 Overseas Press Club Awards, and 3 George Foster Peabody Awards.  Kaplan's career has lead him to launch his own media consulting business, known as KAPLAN MEDIA PARTNERS (KMP).</p>
         </div>
       </div>
