--- a/app/about.html
+++ b/app/about.html
@@ -21,7 +21,7 @@
   <div class="page-wrap">
     <div class="row">
       <div class="small-3 columns">
-        <img src="img/kaplanlogo.png" alt="Kaplan Media Partners">
+        <a href="index.html"><img src="img/kaplanlogo.png" alt="Kaplan Media Partners"></a>
       </div>
       <div class="small-9 columns">
         <div id="nav-wrap">
