--- a/app/index.html
+++ b/app/index.html
@@ -19,23 +19,18 @@
 <body>
   <div id="image-page-wrap">
     <div id="module">
-      <div class="row">
-        <div class="small-4 columns">
-          <img src="img/kaplanlogohomepage.png" alt="Kaplan Media Partners">
+      <div class="module-padding">
+        <div id="nav-homepage">
+          <ul class="navbar cl-effect-1">
+            <li class="white"><a href="#">Contact</a></li>
+            <li class="white"><a href="#">Clients</a></li>
+            <li class="white"><a href="#">Media</a></li>
+            <li class="white"><a href="about.html">About</a></li>
+          </ul>
         </div>
-        <div class="small-7 small-offset-1 columns">
-          <p><span class="title">KAPLAN MEDIA PARTNERS</span> 
-            was founded by Rick Kaplan in August of 2012, with a mission to provide the knowledge and experience to produce quality news programming and documentaries as a network consultant. Kaplan uses his 40 years of experience in TV news production and reporting to deliver media training, crisis management and one-on-one strategy sessions to firms who are looking to increase their influence through groundbreaking conferences and intra-corporate communications.
-          </p>
-          <div id="nav-homepage">
-            <ul class="navbar cl-effect-1">
-              <li class="left-seperate"><a href="#">Contact</a></li>
-              <li><a href="#">Clients</a></li>
-              <li><a href="#">Media</a></li>
-              <li><a href="#">About</a></li>
-            </ul>
-          </div>
-        </div>
+        <p class="index-text"><span class="title-homepage">KAPLAN MEDIA PARTNERS</span> 
+         was founded by Rick Kaplan in August of 2012, with a mission to provide the knowledge and experience to produce quality news programming and documentaries as a network consultant. Kaplan uses his 40 years of experience in TV news production and reporting to deliver media training, crisis management and one-on-one strategy sessions to firms looking to increase their influence.
+        </p>
       </div>
     </div>
   </div>
