contact page, clients page
added small details: cleaned up image folder, put new image w.out CNN
logo on homepage, added captions to about image slider, styled slider

--- a/app/about.html
+++ b/app/about.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" type="text/css" href="css/component.css" />
   <script src="js/vendor/custom.modernizr.js"></script>
   <script type="text/javascript" src="//use.typekit.net/mek5zmk.js"></script>
-  <script type="text/javascript" src="http://fast.fonts.net/jsapi/5022a8da-8057-4ef3-9f95-ca6bc84c9341.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 </head>
@@ -21,15 +20,14 @@
   <div class="page-wrap">
     <div class="row">
       <div class="small-3 columns">
-        <a href="index.html"><img src="img/kaplanlogo.png" alt="Kaplan Media Partners"></a>
+        <a href="index.html"><img src="img/KaplanLogo.png" alt="Kaplan Media Partners"></a>
       </div>
       <div class="small-9 columns">
         <div id="nav-wrap">
           <ul class="navbar cl-effect-1">
-            <li class="left-seperate"><a href="#">Contact</a></li>
-            <li><a href="#">Clients</a></li>
-            <li><a href="#">Media</a></li>
-            <li id="active"><a href="#">About</a>
+            <li class="left-seperate"><a href="contact.html">Contact</a></li>
+            <li><a href="clients.html">Clients</a></li>
+            <li id="active"><a href="about.html">About</a>
              </li>
           </ul>
         </div>
@@ -45,36 +43,63 @@
               <ul data-orbit>
                 <li>
                   <img src="img/homepage3.jpg" alt="Kaplan in the studio">
-                  <!-- <div class="orbit-caption">
-                    <p>here is a dummy caption if wanted</p>
-                </div> -->
+                  <div class="orbit-caption orbit-style">
+                    <p>Rick Kaplan with Liz Gonzalez on the set of CBS Evening News</p>
+                </div>
                 </li>
                   <li>
                   <img src="img/rickone.jpg" alt="Kaplan">
+                  <div class="orbit-caption orbit-style">
+                    <p>Diane Sawyer with Rick Kaplan</p>
+                </div>
                 </li>
                 <li>
                   <img src="img/ricktwo.jpg" alt="Kaplan in the studio">
+                  <div class="orbit-caption orbit-style">
+                    <p> Kaplan on set with Jim Henson</p>
+                </div>
                 </li>
                 <li>
                   <img src="img/rickthree.jpg" alt="Kaplan in the studio">
+                  <div class="orbit-caption orbit-style">
+                    <p>Rick Kaplan and Al Gore</p>
+                </div>
                 </li>
                 <li>
                   <img src="img/rickfour.jpg" alt="Kaplan in the studio">
+                  <div class="orbit-caption orbit-style">
+                    <p>Rick Kaplan in the CNN Newsroom</p>
+                </div>
                 </li>
                 <li>
                   <img src="img/rickfive.jpg" alt="Kaplan in the studio">
+                  <div class="orbit-caption orbit-style">
+                    <p>Rick Kaplan with the CNN-US political team, including Christiane Amanpour and Wolf Blitzer</p>
+                </div>
                 </li>
                 <li>
                   <img src="img/ricksix.jpg" alt="Kaplan in the studio">
+                  <div class="orbit-caption orbit-style">
+                    <p>Rick Kaplan and Michelle Obama</p>
+                </div>
                 </li>
                 <li>
                   <img src="img/rickseven.jpg" alt="Kaplan in the studio">
+                  <div class="orbit-caption orbit-style">
+                    <p>Rick Kaplan and Katie Couric on the set of Evening News</p>
+                </div>
                 </li>
                 <li>
                   <img src="img/rickeight.jpg" alt="Kaplan in the studio">
+                  <div class="orbit-caption orbit-style">
+                    <p>Rick Kaplan with Stephen Colbert</p>
+                </div>
                 </li>
                 <li>
                   <img src="img/ricknine.jpg" alt="Kaplan in the studio">
+                  <div class="orbit-caption orbit-style">
+                    <p>Kaplan and the team for NBC's "A Concert for Hurricane Relief"</p>
+                </div>
                 </li>
               </ul>
             </div>
@@ -82,7 +107,7 @@
         </div>
         <div class="small-6 columns">
           <p class="home-intro"><span class="title">KAPLAN MEDIA PARTNERS</span> 
-            was founded by Rick Kaplan in August of 2012, with a mission to provide the knowledge and experience to produce quality news programming and documentaries as a network consultant. Kaplan uses his 40 years of experience in TV news production and reporting to deliver media training, crisis management and one-on-one strategy sessions to firms who are looking to increase their influence through groundbreaking conferences and intra-corporate communications. Kaplan also works with corporations to develop strong media strategies by helping to create a more efficient company on both an internal and external level. </p>
+            was founded by Rick Kaplan in August of 2012, with a mission to provide the knowledge and experience to produce quality news programming and documentaries as a network consultant. Kaplan uses his 40 years of experience in TV news production and reporting to deliver media training, crisis management and one-on-one strategy sessions to firms who are looking to increase their influence through groundbreaking conferences and intra-corporate communications. Kaplan also works with corporations to develop strong media strategies creating a more efficient company on both an internal and external level. </p>
             <p class="home-intro">Kaplan’s current clients include Aaron Sorkin and The Newsroom. He’s also consulting on a documentary about President George Bush Sr, called “41 on 41.” Kaplan looks forward to expanding his clientele, by working with new TV shows, documentaries, social media firms, attending speaking engagements, and working with any company looking to improve their internal workflow or in need of Kaplan's TV news expertise.</p>
         </div>
       </div>
@@ -145,7 +170,8 @@
       <div class="row">
         <div class="small-10 columns">
           <div class="break-right">
-            <p class="home-info pad-r">KMP’s first client was Aaron Sorkin and the HBO program THE NEWSROOM, where Kaplan was hired to be a Creative Consultant beginning with Season Two. Writing began in September of 2012. In February of 2013 Kaplan was employed to consult and co-produce a historic documentary of former President George Bush- “41 on 41"- for the Bush Library and family. In April of 2013 Kaplan was given the job of overseeing all live productions on shows at THE FUSE NETWORK. Kaplan was also tasked with reorganizing the network and its 250 employees. In October of 2012, Kaplan was contracted by the Madison Square Garden Company and Fuse Network to create and executive produce a 30-minute daily news program solely about music. The program is called Fuse News, and deals with daily breaking news in the music business.</p>
+            <p class="home-info pad-r">KMP’s first client was Aaron Sorkin and the HBO program 
+            <span class="strong">THE NEWSROOM</span>, where Kaplan was hired to be a Creative Consultant beginning with Season Two. Writing began in September of 2012. In February of 2013 Kaplan was employed to consult and co-produce a historic documentary of former President George Bush- “41 on 41"- for the Bush Library and family. In April of 2013 Kaplan was given the job of overseeing all live productions on shows at THE FUSE NETWORK. Kaplan was also tasked with reorganizing the network and its 250 employees. In October of 2012, Kaplan was contracted by the Madison Square Garden Company and Fuse Network to create and executive produce a 30-minute daily news program solely about music. The program is called Fuse News, and deals with daily breaking news in the music business.</p>
            </div>
         </div>
         <div class="small-2 columns">
@@ -173,7 +199,7 @@
           </div>
         </div>
         <div class="small-2 columns">
-            <h4 class="top-pad">nbc</h4>
+            <h4 class="nbc-pad">msnbc<br> &amp; <br>nbc</h4>
           </div>
         </div>
       <div class="row">
@@ -198,7 +224,7 @@
       </div>
       <div class="row">
         <div class="small-2 columns">
-          <h6> abc news nightline</h6>
+          <h4> abc news nightline</h4>
         </div>
         <div class="small-10 columns">
           <div class="break-left">
@@ -213,7 +239,7 @@
           </div>
         </div>
         <div class="small-2 columns">
-          <h6>furthering education</h6>
+          <h4>furthering education</h4>
         </div>
       </div>
     </div>
@@ -232,7 +258,7 @@
   <script>
     $(document).foundation('orbit', {
       animation: 'fade',
-      timer_speed: 7000,
+      timer_speed: 6500,
       resume_on_mouseout: true,
       navigation_arrows: false,
       slide_number: false
