--- a/app/index.html
+++ b/app/index.html
@@ -22,9 +22,8 @@
       <div class="module-padding">
         <div id="nav-homepage">
           <ul class="navbar cl-effect-1">
-            <li class="white"><a href="#">Contact</a></li>
-            <li class="white"><a href="#">Clients</a></li>
-            <li class="white"><a href="#">Media</a></li>
+            <li class="white"><a href="contact.html">Contact</a></li>
+            <li class="white"><a href="client.html">Clients</a></li>
             <li class="white"><a href="about.html">About</a></li>
           </ul>
         </div>
