--- a/app/contact.html
+++ b/app/contact.html
@@ -1,1 +1,94 @@
-contact.html
+<!DOCTYPE html>
+<!--[if IE 8]> 				 <html class="no-js lt-ie9" lang="en" > <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
+
+<head>
+	<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Kaplan Media Partners</title>
+
+  
+  <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" type="text/css" href="css/component.css" />
+  <script src="js/vendor/custom.modernizr.js"></script>
+  <script type="text/javascript" src="//use.typekit.net/mek5zmk.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+</head>
+<body>
+  <div class="page-wrap">
+    <div class="row">
+      <div class="small-3 columns">
+        <a href="index.html"><img src="img/KaplanLogo.png" alt="Kaplan Media Partners"></a>
+      </div>
+      <div class="small-9 columns">
+        <div id="nav-wrap">
+          <ul class="navbar cl-effect-1">
+            <li class="left-seperate" id="active"><a href="contact.html">Contact</a></li>
+            <li><a href="#">Clients</a></li>
+            <li><a href="about.html">About</a>
+             </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="header-border">
+    </div>
+    <div class="row">
+      <div class="small-12 columns">
+        <p class="contact-heading">It is time to create a partnership</p>
+        <p class="contact-sub">Please fill out all the information below and we will get back to you shortly. Make sure to provide your full name and email.</p>
+      </div>
+    </div>
+    <form method="get" action="emailer.php">
+      <div class="row">
+        <div class="small-4 columns">
+          <label>First name</label>
+          <input name="Name-First" type="text" placeholder="first">
+        </div>
+        <div class="small-4 columns">
+          <label>Last name</label>
+          <input name="Name-Last" type="text" placeholder="last">
+        </div>
+        <div class="small-4 columns">
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-6 columns">
+          <label>Email</label>
+          <input name="Email" type="email" placeholder="youremail@email.com">
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 columns">
+          <label>Tell us about your project:</label>
+          <textarea name="Message-One" placeholder=""></textarea>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 columns">
+          <label>How do you see us working together?</label>
+          <textarea name="Message-Two" placeholder=""></textarea>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 columns">
+          <label>Anything else you would like us to know:</label>
+          <textarea name="Message-Three" placeholder=""></textarea>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-4 columns">
+          <button type="submit">Submit</button>
+        </div>
+      </div>
+    </form>
+  </div>
+    <footer class="site-footer">
+    This is the footer - contact info - socialfeeds - another link to contact
+  </footer>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="js/foundation/foundation.js"></script>
+
+</body>
+</html>
