--- a/app/clients.html
+++ b/app/clients.html
@@ -23,7 +23,7 @@
         <a href="index.html"><img src="img/KaplanLogo.png" alt="Kaplan Media Partners"></a>
       </div>
       <div class="small-9 columns">
-        <div id="nav-wrap">
+        <div class="nav-wrap">
           <ul class="navbar cl-effect-1">
             <li class="left-seperate"><a href="contact.html">Contact</a></li>
             <li id="active"><a href="clients.html">Clients</a></li>
@@ -75,8 +75,26 @@
     </div>
   </div>
     <footer class="site-footer">
-    This is the footer - contact info - socialfeeds - another link to contact
-  </footer>
+      <div class="footer-border">
+      <div class="row">
+        <div class="small-2 columns">
+          <div class="footer-nav-wrap">
+            <ul class="footer-nav">
+              <li><a href="contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="clients.html">Clients</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="small-9 columns">
+          <p class="footer-text">
+            Website by <a href="http://michellewegenstein.com" target="_blank">Michelle Wegenstein</a>
+          </p>
+        </div>
+      </div>
+      </div>  
+    </footer>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script>
   document.write('<script src=js/vendor/'
