--- a/app/contact.html
+++ b/app/contact.html
@@ -22,7 +22,7 @@
         <a href="index.html"><img src="img/KaplanLogo.png" alt="Kaplan Media Partners"></a>
       </div>
       <div class="small-9 columns">
-        <div id="nav-wrap">
+        <div class="nav-wrap">
           <ul class="navbar cl-effect-1">
             <li class="left-seperate" id="active"><a href="contact.html">Contact</a></li>
             <li><a href="#">Clients</a></li>
@@ -36,8 +36,8 @@
     </div>
     <div class="row">
       <div class="small-12 columns">
-        <p class="contact-heading">It is time to create a partnership</p>
-        <p class="contact-sub">Please fill out all the information below and we will get back to you shortly. Make sure to provide your full name and email.</p>
+        <p class="contact-heading">Interested in working with Rick Kaplan?</p>
+        <p class="contact-sub">Please fill out the information below and we will get back to you shortly. Make sure to provide your full name and email.</p>
       </div>
     </div>
     <form method="get" action="emailer.php">
@@ -56,7 +56,7 @@
       <div class="row">
         <div class="small-6 columns">
           <label>Email</label>
-          <input name="Email" type="email" placeholder="youremail@email.com">
+          <input name="Email" type="email" placeholder="youremail@address.com">
         </div>
       </div>
       <div class="row">
@@ -79,14 +79,32 @@
       </div>
       <div class="row">
         <div class="small-4 columns">
-          <button type="submit">Submit</button>
+          <button type="submit" class="contact-button">Submit</button>
         </div>
       </div>
     </form>
   </div>
     <footer class="site-footer">
-    This is the footer - contact info - socialfeeds - another link to contact
-  </footer>
+      <div class="footer-border">
+      <div class="row">
+        <div class="small-2 columns">
+          <div class="footer-nav-wrap">
+            <ul class="footer-nav">
+              <li><a href="contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="clients.html">Clients</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="small-9 columns">
+          <p class="footer-text">
+            Website by <a href="http://michellewegenstein.com" target="_blank">Michelle Wegenstein</a>
+          </p>
+        </div>
+      </div>
+      </div>  
+    </footer>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="js/foundation/foundation.js"></script>
 
