Updated homepage per client request
added MSG logo, made font larger in general, changed font color to
match logo color, expanded black module

--- a/app/about.html
+++ b/app/about.html
@@ -20,7 +20,7 @@
   <div class="page-wrap">
     <div class="row">
       <div class="small-3 columns">
-        <a href="index.html"><img src="img/KaplanLogo.png" alt="Kaplan Media Partners"></a>
+        <a href="index.html"><img src="img/kaplanlogo.png" alt="Kaplan Media Partners"></a>
       </div>
       <div class="small-9 columns">
         <div class="nav-wrap">
@@ -38,7 +38,7 @@
     <div id="swirl-image">
       <div class="row home-body">
         <div class="small-6 columns">
-          <div class="slideshow-wrapper">
+          <div class="slideshow-wrapper slideshow-border">
             <div class="pre-loader">
               <ul data-orbit>
                 <li>
