--- a/app/clients.html
+++ b/app/clients.html
@@ -20,7 +20,7 @@
   <div class="page-wrap">
     <div class="row">
       <div class="small-3 columns">
-        <a href="index.html"><img src="img/KaplanLogo.png" alt="Kaplan Media Partners"></a>
+        <a href="index.html"><img src="img/kaplanlogo.png" alt="Kaplan Media Partners"></a>
       </div>
       <div class="small-9 columns">
         <div class="nav-wrap">
