--- a/app/contact.html
+++ b/app/contact.html
@@ -6,8 +6,6 @@
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Kaplan Media Partners</title>
-
-  
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" type="text/css" href="css/component.css" />
@@ -19,7 +17,7 @@
   <div class="page-wrap">
     <div class="row">
       <div class="small-3 columns">
-        <a href="index.html"><img src="img/KaplanLogo.png" alt="Kaplan Media Partners"></a>
+        <a href="index.html"><img src="img/kaplanlogo.png" alt="Kaplan Media Partners"></a>
       </div>
       <div class="small-9 columns">
         <div class="nav-wrap">
@@ -79,7 +77,7 @@
       </div>
       <div class="row">
         <div class="small-4 columns">
-          <button type="submit" class="contact-button">Submit</button>
+          <button type="submit">Submit</button>
         </div>
       </div>
     </form>
