--- a/app/index.html
+++ b/app/index.html
@@ -19,28 +19,30 @@
 <body>
   <div id="image-page-wrap">
     <div id="module">
-      <div class="module-padding">
+      <div class="index-nav">
+        <img src="img/kaplanlogo-only.png" id="module-logo">
         <div id="nav-homepage">
           <ul class="navbar cl-effect-1">
             <li class="white"><a href="contact.html">Contact</a></li>
-            <li class="white"><a href="client.html">Clients</a></li>
+            <li class="white"><a href="clients.html">Clients</a></li>
             <li class="white"><a href="about.html">About</a></li>
           </ul>
         </div>
-        <p class="index-text"><span class="title-homepage">KAPLAN MEDIA PARTNERS</span> 
-         was founded by Rick Kaplan in August of 2012, with a mission to provide the knowledge and experience to produce quality news programming and documentaries as a network consultant. Kaplan uses his 40 years of experience in TV news production and reporting to deliver media training, crisis management and one-on-one strategy sessions to firms looking to increase their influence.
-        </p>
-        <div class="row">
-          <div class="12-small columns white-strip">
-            <ul class="small-block-grid-6">
-              <li><img src="img/abc1.png"></li>
-              <li><img src="img/cbs.png"></li>
-              <li><img src="img/cnn.png"></li>
-              <li class="index-image-pad"><img src="img/hbo.png"></li>
-              <li class="index-image-pad"><img src="img/msnbc.png"></li>
-              <li><img src="img/NBC_logo.png"></li>
-            </ul>
-          </div>
+      </div>
+      <p class="index-text"><span class="title-homepage">KAPLAN MEDIA PARTNERS</span> 
+       was founded by Rick Kaplan in August of 2012, with a mission to provide the knowledge and experience to produce quality news programming and documentaries as a network consultant. Kaplan uses his 40 years of experience in TV news production and reporting to deliver media training, crisis management and one-on-one strategy sessions to firms looking to increase their influence.
+      </p>
+      <div class="row">
+        <div class="12-small columns white-strip">
+          <ul class="small-block-grid-7">
+            <li><img src="img/abc1.png"></li>
+            <li><img src="img/cbs.png"></li>
+            <li><img src="img/cnn.png"></li>
+            <li id="hbo"><img src="img/hbo.png"></li>
+            <li id="msnbc"><img src="img/msnbc.png"></li>
+            <li><img src="img/NBC_logo.png"></li>
+            <li id="msg"><img src="img/logo_msg.png"></li>
+          </ul>
         </div>
       </div>
     </div>
