updated text from client feedback
adding padding to titles on the biography page. cut down videos,
prepped website for launch

--- a/app/clients.html
+++ b/app/clients.html
@@ -20,7 +20,7 @@
   <div class="page-wrap">
     <div class="row">
       <div class="small-3 columns">
-        <a href="index.html"><img src="img/kaplanlogo.png" alt="Kaplan Media Partners"></a>
+        <a href="index.html"><img src="img/KaplanLogo.png" alt="Kaplan Media Partners"></a>
       </div>
       <div class="small-9 columns">
         <div class="nav-wrap">
@@ -47,7 +47,7 @@
             <div class="client-image-container">
               <a href="http://www.hbo.com/the-newsroom" target="_blank"><img src="img/the-newsroom.png" class="client-image" width="170px" height="65.68px"></a>
             </div>
-            <p class="client-text">Kaplan was hired in as the Creative Consultant for Season 2 of HBO's hit show, THE NEWSROOM. Kaplan worked directly with Sorkin and his writing team to conceptualize and guide the plot and dialogue of Season 2. He also consulted on the show's set in NY and L.A.,  providing insight into control room and newsroom jargon, dialogue pacing, and character movement to help scenes mirror a real-world setting. At the conclusion of the season, Sorkin told Rick, "<em>I can draw a straight line from the season's successful moments right back to you and I'm forever in your debt.</em>" 
+            <p class="client-text">Kaplan was hired as a Creative Consultant for Season 2 of HBO's hit show, THE NEWSROOM. Kaplan worked directly with Sorkin and his writing team to conceptualize and guide the plot and dialogue of Season 2. He also consulted on the show's set in NY and L.A.,  providing insight into control room and newsroom jargon, dialogue pacing, and character movement to help scenes mirror a real-world setting. At the conclusion of the season, Sorkin told Rick, "<em><strong>I can draw a straight line from the season's successful moments right back to you and I'm forever in your debt.</strong></em>" Read more about Kaplan's work with Sorkin <span class="katie-couric"><a href="http://www.hollywoodreporter.com/news/aaron-sorkin-hbo-drama-newsroom-570176" target="_blank">here<span></a>. 
             </p>
           </div>
         </li>
@@ -56,7 +56,7 @@
             <div class="client-image-container">
               <a href="http://www.fuse.tv" target="_blank"><img src="img/fuseuse.jpg" class="client-image" width="170px" height="65.68px"></a>
             </div>
-            <p class="client-text">Kaplan was contracted as a consulting Executive Producer by Madison Square Garden Company and Fuse Network to create and executive produce Fuse News, a 30-minute daily news program solely about music. The program reported on more than 24 major topics per week, and included live performances and interviews. When Kaplan completed his consultancy, ratings for Fuse News had grown by more than 300%. In April 2013 Kaplan switched from an editorial role to a management role, and was given the job of overseeing all live productions on shows at The Fuse Network. Kaplan was tasked with reorganizing the network and its 250 employees.
+            <p class="client-text">Kaplan was contracted as a consulting Executive Producer by MADISON SQUARE GARDEn COMPANY and FUSE NETWORK to create and executive produce Fuse News, a 30-minute daily news program solely about music. The program reported on more than 24 major topics per week, and included live performances and interviews. When Kaplan completed his consultancy, ratings for Fuse News had grown by more than 300%. In April 2013 Kaplan switched from an editorial role to a management role, and was given the job of overseeing all live productions on shows at The Fuse Network. Kaplan was tasked with reorganizing the network and its 250 employees.
             </p>
           </div>
         </li>
@@ -65,7 +65,7 @@
             <div class="client-image-container">
               <h3 class="client-title">41 on 41</h3>
             </div>
-            <p class="client-text">In February of 2013 Kaplan was employed to consult and co-produce a historic documentary of former President George Bush- "41 on 41"- for the Bush Library and family. By filming interviews of 41 of President Bush’s friends, the documentary will draw a more complete picture for historians of America’s oldest living president, as one of the most accomplished, honorable, and most prepared presidents in history. Kaplan is currently acting as an Executive Producer for the documentary, helping to shape the film by making editorial decisions regarding the quotes and themes that will be included in the final edit. The documentary has a projected release date in the spring of 2014.
+            <p class="client-text">In February of 2013 Kaplan was employed to consult and co-produce a historic documentary of former <strong>President George H.W. Bush</strong> - "41 ON 41"- for the Bush Library and family. By filming interviews of 41 of President Bush’s friends, the documentary will draw a more complete picture for historians of America’s oldest living president, as one of the most accomplished, honorable, and most prepared presidents in history. Kaplan is currently acting as an Executive Producer for the documentary, helping to shape the film by making editorial decisions regarding the quotes and themes that will be included in the final edit. The documentary has a projected release date in the spring of 2014.
             </p>
           </div>
         </li>
@@ -77,17 +77,17 @@
     <footer class="site-footer">
       <div class="footer-border">
       <div class="row">
-        <div class="small-2 columns">
+        <div class="small-5 columns">
           <div class="footer-nav-wrap">
             <ul class="footer-nav">
-              <li><a href="contact.html">Contact</a></li>
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="clients.html">Clients</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
-        <div class="small-9 columns">
+        <div class="small-7 columns">
           <p class="footer-text">
             Website by <a href="http://michellewegenstein.com" target="_blank">Michelle Wegenstein</a>
           </p>
