--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <p class="index-text"><span class="title-homepage">KAPLAN MEDIA PARTNERS</span> 
-       was founded by Rick Kaplan in August of 2012, with a mission to provide the knowledge and experience to produce quality news programming and documentaries as a network consultant. Kaplan uses his 40 years of experience in TV news production and reporting to deliver media training, crisis management and one-on-one strategy sessions to firms looking to increase their influence.
+       was founded by Rick Kaplan in August of 2012, with a mission to provide the knowledge and experience to produce quality news programming and documentaries as a network consultant. Kaplan uses his 40 years of experience in TV news production and reporting to deliver media training, crisis management and one-on-one strategy sessions to firms looking to improve and increase their influence in the media world.
       </p>
       <div class="row">
         <div class="12-small columns white-strip">
@@ -40,7 +40,7 @@
             <li><img src="img/cnn.png"></li>
             <li id="hbo"><img src="img/hbo.png"></li>
             <li id="msnbc"><img src="img/msnbc.png"></li>
-            <li><img src="img/NBC_logo.png"></li>
+            <li id="nbc"><img src="img/NBC_logo.png"></li>
             <li id="msg"><img src="img/logo_msg.png"></li>
           </ul>
         </div>
