--- a/app/contact.html
+++ b/app/contact.html
@@ -17,7 +17,7 @@
   <div class="page-wrap">
     <div class="row">
       <div class="small-3 columns">
-        <a href="index.html"><img src="img/kaplanlogo.png" alt="Kaplan Media Partners"></a>
+        <a href="index.html"><img src="img/KaplanLogo.png" alt="Kaplan Media Partners"></a>
       </div>
       <div class="small-9 columns">
         <div class="nav-wrap">
@@ -85,17 +85,17 @@
     <footer class="site-footer">
       <div class="footer-border">
       <div class="row">
-        <div class="small-2 columns">
+        <div class="small-5 columns">
           <div class="footer-nav-wrap">
             <ul class="footer-nav">
-              <li><a href="contact.html">Contact</a></li>
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="clients.html">Clients</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
-        <div class="small-9 columns">
+        <div class="small-7 columns">
           <p class="footer-text">
             Website by <a href="http://michellewegenstein.com" target="_blank">Michelle Wegenstein</a>
           </p>
